--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   google_fonts: ^2.1.0
   intl: ^0.17.0
   flutter_local_notifications: ^9.1.1
+  flutter_datetime_picker: ^1.5.1
+
 
 dev_dependencies:
   flutter_test:
