--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   intl: ^0.17.0
   flutter_local_notifications: ^9.1.1
   flutter_datetime_picker: ^1.5.1
+  sqflite:
+  path:
 
 
 dev_dependencies:
