--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   google_fonts: ^2.1.0
   intl: ^0.17.0
-  flutter_local_notifications: ^9.1.1
+  flutter_local_notifications: ^9.1.3
   flutter_datetime_picker: ^1.5.1
-  sqflite:
-  path:
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
